<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Egeio</string>
    <string name="action_settings">Settings</string>
    <string name="notify_exit_application">Are you sure exit ?</string>
    <string name="confirm">退出</string>
    <string name="cancel">取消</string>
    <string name="Message">消息</string>
    <string name="File">文件</string>
    <string name="Contacts">联系人</string>
    <string name="Setting">设置</string>
    <string name="file_count_info">count :  %1$d dirctors , %2$d files. </string>
    <string name="request_exception"> request exception </string>
    <string name="connect_error"> connect error </string>
    
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>

    <!-- button -->
    <string name="common_yes">yes</string>
    <string name="common_no">no</string>
    <string name="common_ok">ok</string>
    <string name="common_cancel">取消</string>
    <string name="common_sure">确定</string>
    <string name="common_continue">continue</string>
    <string name="common_try_again">try again</string>
    <string name="common_error">error</string>
    <string name="common_warning">warning</string>
    <string name="common_sign_in">sign in</string>
    <string name="common_login">登录</string>
    <string name="common_tips">【tips】</string>
    <string name="common_share">分享</string>
    <string name="common_more">更多</string>
    <string name="common_down">下载到本地</string>
    <string name="common_view">审阅</string>
    <string name="common_rename">重命名</string>
    <string name="common_mark">收藏</string>
    <string name="common_delete">删除</string>
    <string name="common_create">创建</string>
     <string name="common_download">下载</string>
    <string name="login_error">Username or password error.</string>
    <string name="store_no_internet">Unable to connect to internate.</string>
    <string name="store_server_error">Unable to contact services.</string>
    <string name="store_server_error_retry">Please retry in a few minutes.</string>
    <string name="err_system_error">System Error.</string>
    <string name="request_timed_out">The server request timed out and try again.</string>
    <string name="general_no_internet_txt1">Please check your Internet connection, and try again.</string>
    <string name="general_no_internet_txt2">Make sure your network connection is active and try again.</string>
    <string name="menu_all_filder">全部目录</string>
    <string name="menu_mark">收藏</string>
    <string name="menu_usually">收藏</string>
    <string name="menu_create">创建文件夹</string>
    <string name="menu_photo">拍摄照片或视频</string>
    <string name="menu_photo_select">从媒体中选择</string>
    <string name="menu_all_message">全部消息</string>
    <string name="menu_view">审阅</string>
    <string name="menu_news">动态</string>
    <string name="menu_mis">私信</string>
    <string name="menu_toast">简报</string>
    <string name="menu_href">连接</string>
    <string name="menu_share">共享</string>
    <string name="review_member">审阅人</string>
    <string name="commit_hint">留言:</string>
    <string name="title_select_contacts">编辑审阅人</string>
    <string name="upload">上传</string>
    <string name="never">从不</string>
    
    <string name="share_openall">完全公开</string>
    <string name="share_opengroup">公司内部访问</string>
    <string name="share_openterm">协作者访问</string>
    
    <string name="downloadable">可下载</string>
    <string name="diedline">截止日期</string>
    <string name="setpassword">设置密码</string>
    <string name="back">返回</string>
    <string name="accessSet">权限设置</string>
    <string name="notset">未设置</string>
    <string name="share_error">发起分享失败</string>
    
    <string name="colleague">同事</string>
    <string name="qq_msg">微信</string>
	<string name="sms">短信</string>
	<string name="email">邮件</string>
	<string name="copy">复制</string>
	
	<string name="novalidfile">没有有效的文件 。。。 </string>
	<string name="loading">正在加载 。。。 </string>
	<string name="loadingfile">正在加载文件...</string>
	
	<string name="selected">选择</string>
	<string name="ok">确定</string>
    <string name="confirm_exit">确认退出程序？</string>
    <string name="mainmenu_home">主目录</string>
    <string name="mainmenu_refresh">刷新</string>
    <string name="mainmenu_createdir">新建文件夹</string>
    <string name="mainmenu_exit">退出</string>
    <string name="file_rename">重命名</string>
    <string name="file_delete">删除</string>
	<string name="file_info">详情</string>
    <string name="file_cannotopen">无法打开: %1$s</string>
    <string name="file_exists">文件已存在！</string>
    <string name="file_namecannotempty">文件名不能为空</string>
    <string name="file_create_fail">创建文件失败！</string>
    <string name="file_rename_fail">重命名失败！</string>
    <string name="file_name">文件名</string>
    <string name="file_size">大小</string>
    <string name="file_contents">内容</string>
    <string name="file_lastmodified">最后修改时间</string>
    <string name="file_paste">粘贴</string>
    <string name="file_copy">复制</string>
    <string name="file_move">移动</string>
    <string name="file_create">新建</string>
    <string name="file_copy_fail">复制文件失败！</string>
    <string name="file_move_fail">移动文件失败！</string>
    <string name="file_notexists">文件不存在！</string>
    <string name="filelist">文件列表</string>
    <string name="invalidfile_cannotupload">不合法的文件，无法上传。。。</string>
    <string name="transport">传输列表</string>
    
    <string name="setting">设置</string>
    
    <string name="userinfo">个人信息</string>
    <string name="tranList">传输列表</string>
    <string name="update_name">修改名称</string>
    <string name="update_phone">修改电话</string>
    <string name="update_email">修改邮件</string>
    
    <string name="select_form_photo">从相册选择</string>
    <string name="take_photo">拍照上传</string>
    
    <string name="file_commons">记录</string>
    
</resources>