<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/menu_height_bottom"
    android:layout_alignParentBottom="true"
    android:clickable="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/menu_height_bottom"
        android:background="@drawable/bottom_bg_gray"
        android:gravity="bottom" >

        <RelativeLayout
            style="@style/fill_parent"
            android:layout_weight="1.0" >

            <ImageView
                android:id="@id/line"
                style="@style/wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/bottom_menu_line" />

            <LinearLayout
                android:id="@id/msgHos"
                style="@style/fill_parent"
                android:layout_toLeftOf="@id/line"
                android:gravity="center" >

                <ImageView
                    android:id="@id/msgHos_image"
                    style="@style/file_edit_btn_img"
                    android:src="@drawable/viewer_msg" />

                <TextView
                    android:id="@id/msgHos_text"
                    style="@style/file_edit_text"
                    android:text="@string/file_commons" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            style="@style/fill_parent"
            android:layout_weight="1.0" >

            <ImageView
                android:id="@id/line"
                style="@style/wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/bottom_menu_line" />

            <LinearLayout
                android:id="@id/Share"
                style="@style/fill_parent"
                android:layout_toLeftOf="@id/line"
                android:background="@drawable/bottom_btn_bg"
                android:gravity="center" >

                <ImageView
                    android:id="@id/share_image"
                    style="@style/file_edit_btn_img"
                    android:src="@drawable/menu_share" />

                <TextView
                    android:id="@id/shareText"
                    style="@style/file_edit_text"
                    android:text="@string/common_share" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            style="@style/fill_parent"
            android:layout_weight="1.0" >

            <ImageView
                android:id="@id/line"
                style="@style/wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/bottom_menu_line" />

            <LinearLayout
                android:id="@id/ReView"
                style="@style/fill_parent"
                android:layout_toLeftOf="@id/line"
                android:background="@drawable/bottom_btn_bg"
                android:gravity="center" >

                <ImageView
                    android:id="@id/ReView_image"
                    style="@style/file_edit_btn_img"
                    android:src="@drawable/viewer_review" />

                <TextView
                    android:id="@id/ReView_text"
                    style="@style/file_edit_text"
                    android:text="@string/common_view" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@id/Copy"
            style="@style/fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/bottom_btn_bg"
            android:gravity="center" >

            <ImageView
                android:id="@id/Copy_image"
                style="@style/file_edit_btn_img"
                android:src="@drawable/viewer_copy" />

            <TextView
                android:id="@id/Copy_text"
                style="@style/file_edit_text"
                android:text="@string/copy" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>