<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_login_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="25dip"
        android:background="@drawable/background"
        android:gravity="top|center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:layout_marginLeft="10dp"
                android:background="@color/transparent"
                android:hint="账号"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAppearance="@style/LoginFont" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="0dp"
                android:background="@color/lightgray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:background="@color/transparent"
                android:hint="密码"
                android:password="true"
                android:singleLine="true"
                android:textAppearance="@style/LoginFont" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:minHeight="60dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login_button"
            style="@style/button_red"
            android:layout_weight="1"
            android:text="@string/common_login" />

        <Button
            android:id="@+id/exit_button"
            style="@style/button_red"
            android:layout_weight="1"
            android:text="@string/common_cancel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/errorMsgLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/errorMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_error"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/errorMsgShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/common_tips"
            android:textColor="@color/aliceblue"
            android:textSize="18sp"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>